correction collapse

--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -28,7 +28,7 @@
 .banner-text {
     position: absolute;
     top: 0;
-    font-size: 45px;
+    font-size: 40px;
     color: #fff;
     font-weight: 500;
     margin: 0;
