--- a/src/components/collapse/collapse.css
+++ b/src/components/collapse/collapse.css
@@ -41,7 +41,7 @@
 .collapse_arrow {
     margin-top: 2.0rem;
     pointer-events: none;
-    transform: rotate(0deg);
+    transform: rotate(180deg);
 
     transition: transform 300ms;
     transform-origin: bottom -25%;
@@ -77,7 +77,7 @@
 }
 
 .rotate {
-    transform: rotate(180deg);
+    transform: rotate(360deg);
 }
 
 .show {
